deploy/index-web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: systems-index-web
  namespace: NAMESPACE
  labels:
    app: systems-index-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: systems-index-web
  strategy: {}
  template:
    metadata:
      labels:
        app: systems-index-web
    spec:
      containers:
        - name: systems-index-web
          image: AWS_ECR_URI
          ports:
            - containerPort: 3000
          resources: {}
