deploy/index-web-service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: NAMESPACE
  name: systems-index-web-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: LoadBalancer
  selector:
    app: systems-index-web
