deploy/index-web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: systems-index-dev-ns
  name: systems-index-web-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: sg-0cbc30ceb65f60a41
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:807380035085:certificate/1508751a-aff5-4f0c-80b2-0d9bee1ab212
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: systems-index-web-nlb
                port:
                  number: 80
